--- a/assignments/form.css
+++ b/assignments/form.css
@@ -1,11 +1,7 @@
 div{
-    margin: 50px;
+    margin: 10px;
     font-size: 20px;
-    line-height: 40px;
-}
-button{
-    margin-left: 50vw;
-    font-size: 30px;
+    padding: 10px;
 }
 input{
     margin-left: 10px;
