--- a/practise/fully responsive website/phone.css
+++ b/practise/fully responsive website/phone.css
@@ -34,7 +34,8 @@ font-size: 20px;
     width: 1000px;
 }
 #home{
-
+width: 733px;
+padding: 3px 150px;
 
 }
 #home p{
@@ -51,14 +52,21 @@ font-size: 20px;
 
 /* section services  */
 #services{
-
+width: 1000px;
+flex-direction: column;
+height: 710px;
 }
 
 #services .box{
 
 }
+
+#Our-services{
+    height :730px;
+    width: 1000px;
+}
 #Our-services h1{
-    
+    margin-top: 75px;
 }
 
 .image-services{
@@ -72,20 +80,28 @@ font-size: 20px;
 
 /* clients  */
 
+#Our-Clients{
+width: 1000px;
+}
+
+#Our-Clients h1{
+    margin-bottom: 10px;
+    }
 #clients{
     /* border: solid black 2px;  */
+    width: 1000px;
 
     
 }
 #clients::before{
- 
+    width: 1000px;
 }
 #clients img{
    
 }
 
 #footer{
-  
+width: 1000px;  
 
 }
 #footer p{
