--- a/practise/fully responsive website/stylesheet.css
+++ b/practise/fully responsive website/stylesheet.css
@@ -109,7 +109,7 @@
     align-items: center;
     padding: 10px 20px;
     background-color:#f5f0e8;
-    height: 350;
+    height: 350px;
     border-radius: 26px;
 }
 #Our-services h1{
