all error resolved in server.js in mysql_express_server

--- a/mysql_express_server/views/persons.hbs
+++ b/mysql_express_server/views/persons.hbs
@@ -19,8 +19,8 @@
     <td>{{person.name}}</td>
     <td>{{person.age}}</td>
     <td>{{person.city}}</td>
-
     </tr>
+    {{/each}}
 </table>
 
 </body>
