added db.js file

--- a/mysql_express_server/views/persons.hbs
+++ b/mysql_express_server/views/persons.hbs
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>persons</title>
 </head>
+
 <body>
-    
-<table border="1" cellspacing = "10" cellpadding = "10">
-    <tr>
-        <th>NAME</th>
-        <th>AGE</th>
-        <th>CITY</th>
-    </tr>
-    {{#each persons as |person| }}
-    <tr>
-    
-    <td>{{person.name}}</td>
-    <td>{{person.age}}</td>
-    <td>{{person.city}}</td>
-    </tr>
-    {{/each}}
-</table>
+    <a href="/add">Add person</a><br>
+    <table border="1" cellspacing="10" cellpadding="10">
+        <tr>
+            <th>NAME</th>
+            <th>AGE</th>
+            <th>CITY</th>
+        </tr>
+        {{#each persons as |person| }}
+        <tr>
+            <td>{{person.name}}</td>
+            <td>{{person.age}}</td>
+            <td>{{person.city}}</td>
+        </tr>
+        {{/each}}
+    </table>
 
 </body>
+
 </html>
