--- a/mysql_express_server/views/persons.hbs
+++ b/mysql_express_server/views/persons.hbs
@@ -9,6 +9,7 @@
 
 <body>
     <a href="/add">Add person</a><br>
+    <a href="/show">Show person</a><br>
     <table border="1" cellspacing="10" cellpadding="10">
         <tr>
             <th>NAME</th>
