--- a/mysql_express_server/views/persons.hbs
+++ b/mysql_express_server/views/persons.hbs
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    <a href="/add">Add person</a><br>
-    <a href="/show">Show person</a><br>
+    <a href="/pages/add">Add person</a><br>
+    <a href="/pages/show">Show person</a><br>
     <table border="1" cellspacing="10" cellpadding="10">
         <tr>
             <th>NAME</th>
