user info sumbit to database

--- a/assignments/website gym/public/stylesheet.css
+++ b/assignments/website gym/public/stylesheet.css
@@ -2,7 +2,7 @@
 body {
     margin: 0px;
     padding: 0px;
-    background: url(../images/bg.jpg);
+    background: url(bg.jpg);
     background-repeat: no-repeat;
     background-size: 1280px 650px;
 }
