login and signup functionality added

--- a/passportlogin/views/signup.hbs
+++ b/passportlogin/views/signup.hbs
@@ -11,10 +11,10 @@
     <form action="/signup" method="POST">
         <h2>SignUp</h2>
         <br><br>
-        <input type="text" name="firstname" placeholder="first name">
-        <input type="text" name="lastname" placeholder="last name">
-        <input type="text" name="username" placeholder="username">
-        <input type="text" name="password" placeholder="password"> 
+        <input type="text" name="firstname" placeholder="first name"><br>
+        <input type="text" name="lastname" placeholder="last name"><br>
+        <input type="text" name="username" placeholder="username"><br>
+        <input type="password" name="password" placeholder="password"> <br>
         <button name="submit">Submit</button>
 
     </form>
