--- a/passportlogin/views/login.hbs
+++ b/passportlogin/views/login.hbs
@@ -11,8 +11,8 @@
     <form action="/login" method="POST">
         <h2>Login </h2>
         <br><br>
-        <input type="text" name="username" placeholder="username">
-        <input type="text" name="password" placeholder="password">
+        <input type="text" name="username" placeholder="username"><br>
+        <input type="password" name="password" placeholder="password"><br>
         <button name="submit">Submit</button>
 
     </form>
